[tool.poetry]
name = "fastapi-backend-template"
version = "0.1.0"
description = "A FastAPI backend template."
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
loguru = "^0.7.2"
fastapi-cache2 = "^0.2.1"
edge-sim-py = {git = "https://github.com/ArielMAJ/EdgeSimPy.git", rev = "1.3.1"}


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"

[tool.coverage.run]
branch=true
source = ["api"]
omit = [
    "api/__main__.py",
    "api/config.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
